# TuyaOpen

apps/tuya_t5_pixel/: README.md  README_CN.md
apps/tuya_t5_pixel/tools/pixel_art_gen/: tool_pixel_art_gen.py
apps/tuya_t5_pixel/tuya_t5_pixel_bongocat_kb/pc_kb_event/: key_event.py  requirements.txt
apps/tuya_t5_pixel/tuya_t5_pixel_bongocat_kb/src/: tuya_main.c
apps/tuya_t5_pixel/tuya_t5_pixel_demo/src/: tuya_main.c
apps/tuya_t5_pixel/tuya_t5_pixel_mic_spectrum_meter/src/: spectrum_meter.c
apps/tuya_t5_pixel/tuya_t5_pixel_simple_shapes/src/: simple_shapes.c
apps/tuya_t5_pixel/tuya_t5_pixel_sphere_effect/back/: sphere_effect-back.c
apps/tuya_t5_pixel/tuya_t5_pixel_sphere_effect/src/: sphere_effect.c
apps/tuya_t5_pixel/tuya_t5_pixel_weather/: CMakeLists.txt
apps/tuya_t5_pixel/tuya_t5_pixel_weather/config/: TUYA_T5AI_PIXEL.config
apps/tuya_t5_pixel/tuya_t5_pixel_weather/include/: pixel_art_types.h  weather_display.h
apps/tuya_t5_pixel/tuya_t5_pixel_weather/src/: cli_cmd.c  tuya_main.c  weather_display.c  weather_get.c
boards/T5AI/TUYA_T5AI_PIXEL/: CMakeLists.txt  board_bmi270_api.c  board_bmi270_api.h  board_buzzer_api.c  board_buzzer_api.h  board_com_api.h  board_pixel_api.c  board_pixel_api.h  tuya_t5ai_pixel.c
boards/T5AI/TUYA_T5AI_PIXEL/fonts/: pixel_font_adapter.h
examples/e-Paper/: README.md  README_CN.md  README_CN_Touch.md  README_Touch.md
examples/e-Paper/1.54inch_e-Paper/examples/: EPD_1in54_V2_test.c  EPD_Test.h  ImageData.c  ImageData.h
examples/e-Paper/2.13inch_e-Paper_Touch/: CMakeLists.txt
examples/e-Paper/2.13inch_e-Paper_Touch/examples/: 2in13_TestCode_V4.c  ImageData.c  ImageData.h  main.c
examples/e-Paper/2.13inch_e-Paper_Touch/lib/Config/: DEV_Config.c  DEV_Config.h  Debug.h
examples/e-Paper/2.13inch_e-Paper_Touch/lib/Driver/: GT1151.c
examples/e-Paper/2.13inch_e-Paper_Touch/lib/Fonts/: font12CN.c  font24CN.c
examples/e-Paper/2.13inch_e-Paper_Touch/lib/GUI/: GUI_Paint.c  GUI_Paint.h
examples/e-Paper/2.13inch_e-Paper_Touch/lib/e-Paper/: EPD_2in13_V4.c  EPD_2in13_V4.h
examples/e-Paper/4.26inch_e-Paper/: CMakeLists.txt
src/tal_cellular/src/: tal_cellular.c
src/tuya_cloud_service/ble/: ble_mgr.c
src/tuya_cloud_service/netmgr/: netconn_cellular.c  netconn_wifi.c  netmgr.c
(+47 files in other folders)
